--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <link rel="icon" href="./image.png" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
-<!-- <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet"> -->
 <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -20,17 +19,17 @@
 			<img src="./pic.png">
 		</div>
 		<div class="details">
-			<h4 class="color1">I want to kiss you!</h2>
-			<h4 class="color2 margin">(HAPPY Valentine's Day)</h3>
+			<h4 class="color2 margin">HAPPY Valentine's Day 💕</h3>
+			<h4 class="color1"></h2>
 			<p>Dear Recel,</p>
-			<p>Let's see.. .</p>
-			<p>You’re never around me,</p>
-			<p>But I want you constantly.</p>
-			<p>Your presence makes me happy,</p>
-			<p>I want you for eternity.</p>
+			<p>Every day with you feels like a page</p>
+			<p>from the best love story.</p>
+			<p>You’re the reason my world feels brighter,</p>
+			<p>my heart beats faster,</p>
+			<p>and my future looks so beautiful.</p>
 			<p>Will you be my valentine?</p>
-			<p>Cause your hug makes me shine 😊</p>
-			<p class="text-right">Happy Valentines Day, love you so much!</p>
+			<p>Happy Valentine's Day,</p>
+			<p>love you sooo much!</p>
 			<p class="text-right">♥Mr Icikiwir</p>
 		</div>
 	</div>
